User Application fixes